2003-08-30  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-location.c

	Fixed bad parameter mismatch spotted by Pav Lucistnik
	
	* cong-location.c

	Added some bulletproofing to the get next/prev word routines for when the cursor is at the very end of a TEXT node
	
	* xmledit.c

	Fix for bug #115993
	
2003-08-29  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-editor-node-text.c

	Removed some debug logging

	* cong-document.c, cong-editor-area-flow-holder-inlines.c, cong-editor-widget3.c, plugin-lists.c, plugin-paragraph.c

	Removed some debug logging
	
	* cong-document.c, cong-util.c, cong-util.h, plugin-docbook.c

	Fix for bug #109869
	
2003-08-28  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-editor-node-text.c

	Big optimisation: only regenerate markup (and the subsequent activity) for selection changes that are significant to the result

	* cong-editor-area-text-fragment.c

	Cursor is now visible when in right-most position within a run of text

	* cong-document.c, cong-node.h, cong-util.c, cong-util.h, tree.c, xmldata.c

	Initial cursor placement, and placement of cursor when tags are added; some warnings fixed

	* cong-editor-widget3.c, cong-file-export.c, cong-file-open.c, cong-file-save.c, cong-tree-view.c

	Fixed some warnings
	
2003-08-27  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-debug-log-view.c, cong-editor-area-bin.c, cong-editor-area.c, cong-editor-child-policy.c, cong-editor-widget3.c, cong-file-new.c, plugin-lists-node-element-listitem.c, popup.c, xmldata.c 

	Fixed some warnings
	
	* cong-document.c, cong-document.h, cong-editor-widget3.c

	Support for deleting the selection
	
	* cong-text-cache.c

	Fixed a missing return value and added lots of assertions

	* cong-text-cache.c

	Fixed an assertion failure when moving the cursor through a region of stripped whitespace
	
2003-08-26  David Malcolm <david@davemalcolm.demon.co.uk>
